<resources>
    <string name="app_name">Time is Gold</string>

    <string name="pref_setting" translatable="false">pref_setting</string>
    <string name="pref_initialize" translatable="false">pref_first_time</string>
    <string name="pref_user_id" translatable="false">pref_user_id</string>
    <string name="pref_widget" translatable="false">pref_widget</string>

    <string name="welcome">WELCOME!</string>
    <string name="just_start">Just Start</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="key_statistics_day" translatable="false">key_statistics_day</string>
    <string name="key_category" translatable="false">key_category</string>
    <string name="key_activity" translatable="false">key_activity</string>
    <string name="key_history" translatable="false">key_history</string>
    <string name="key_start" translatable="false">key_start</string>
    <string name="key_stop" translatable="false">key_stop</string>
    <string name="key_widget_id" translatable="false">key_widget_id</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="start_activity">Start Activity</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="settings">Settings</string>
    <string name="about" translatable="false">About</string>
    <string name="signout">Sign out</string>
    <string name="select_an_activity">Select an Activity</string>
    <string name="life">Life</string>
    <string name="etc">Etc</string>
    <string name="waste">Waste</string>
    <string name="refresh">Refresh</string>
    <string name="self_improvement">Self-Improvement</string>
    <string name="work">Work</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="select_category_color">Select Category Color</string>
    <string name="select_category_icon">Select Category Icon</string>
    <string name="category_is_saved">Category is saved successfully!</string>
    <string name="desc">Description</string>
    <string name="started_at">Started At: %1$s</string>
    <string name="summary">Summary</string>
    <string name="there_is_an_already_running_activity">There is an already running activity.</string>
    <string name="stop_activity_confirm_message">Are you sure you want to quit the current activity?</string>
    <string name="ended_at">Ended At: %1$s</string>
    <string name="ok">Ok</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="delete_category_done">Category is deleted successfully.</string>
    <string name="chart_unit_hour">Unit: Hour</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="error_incorrect_time">Change the start time to be before the end of the activity.</string>
    <string name="action_clear_all">Clear All</string>
    <string name="delete_activity_confirm_message">Are you sure you want to delete the all history?</string>
    <string name="delete_history_confirm_message">Are you sure you want to delete this history?</string>
    <string name="there_are_no_data">There are no data.</string>
    <string name="update_complete_message">Update is done!</string>
    <string name="delete_complete_message">Delete is done!</string>
    <string name="statistics_header_past">It is the time you used in the past %1$d days.</string>
    <string name="statistics_header_today">It is the time you are using today.</string>
    <string name="elapsed_time">Elapsed Time: %1$s</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="time_format_short" translatable="false">%1$s:%2$s</string>
    <string name="date_format" translatable="false">%1$d-%2$s-%3$s</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="desc_category_icon">Category Icon</string>
    <string name="desc_category_color">Category Color</string>
    <string name="desc_category_icon_bg">Category Icon Background</string>
    <string name="desc_category_favorite">Category Favorite</string>
    <string name="desc_empty_contents">There are no data.</string>
    <string name="desc_profile">User Profile Image</string>
    <string name="desc_statistics_today">Statistics Today</string>
    <string name="desc_statistics_yesterday">Statistics Yesterday</string>
    <string name="desc_statistics_week">Statistics Week</string>
    <string name="desc_statistics_month">Statistics Month</string>
    <string name="desc_start_activity">Start Activity</string>
    <string name="desc_history">History</string>
    <string name="desc_activity_control">Activity Control</string>
    <string name="desc_save_category">Save Category</string>
    <string name="desc_update_history">Update History</string>
    <string name="desc_operate">Activity Operate</string>
    <string name="desc_save_activity">Save Activity</string>
    <string name="desc_add_category">Add Category</string>

</resources>
