<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:context="com.youknow.timeisgold.view.MenuFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <View
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/tv_name"
                app:layout_constraintBottom_toTopOf="@+id/tv_name" />

        <Button
                android:id="@+id/btn_sign_in_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="10sp"
                android:layout_margin="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/header" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/statistics"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header" />

            <LinearLayout
                    android:id="@+id/menu_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_view_day" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/today"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/menu_yesterday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_view_day" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/yesterday"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/menu_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_view_week" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/week"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/menu_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_view_month" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/month"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary" />

            <LinearLayout
                    android:id="@+id/menu_start_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_add_activity" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/start_activity"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/menu_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_activity_history" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_gravity="center"
                        android:text="@string/history"
                        android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>